<resources>
    <string name="app_name">Time Earn</string>
    <string name="signin">Sign In</string>
    <string name="logout">Logout</string>
    <string name="registration">Register Profile</string>

    <string name="picutureTest">Default User Picture</string>

    <string name="fullName">Full Name</string>
    <string name="fullNameHint">Mario Rossi</string>

    <string name="nickname">Nickname</string>
    <string name="nickname_hint">Draco123</string>

    <string name="email">Email</string>
    <string name="email_hint">mariorossi@general.it</string>
    <string name="emailHint2">Email</string>

    <string name="location">Location</string>
    <string name="location_hint">Corso Castelfidardo, 39, Torino TO</string>

    <string name="aboutMe">About me</string>

    <string name="skills">My skills :</string>
    <string name="menu_skills">Choose skill</string>

    <string name="accInfo">My account</string>

    <string name="editSkillTitle">Edit skill :</string>
    <string name="addSkillTitle">Add skill :</string>
    <string name="removeSkill">Delete skill</string>
    <string name="OfferedService">Offered Advertisement</string>
    <string name="EditService">Edit Advertisement</string>
    <string name="AddService">Add Advertisement</string>
    <string name="ListOfferedServices">My Advertisements</string>
    <string name="ListOnlineServices">Online Advertisements</string>

    <string name="EmptyList">No offered services available</string>

    <string name="Title">Title</string>
    <string name="Description">Description</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="Duration">Duration</string>
    <string name="Location">Location</string>
    <string name="Skill">Skill</string>

    <string name="barTitle">Time Banking</string>

    <string name="welcome">Welcome to the TimeEarn App.</string>
    <string name="welcome2">Do not forget, here time is money!</string>
    <string name="welcome3">Sign in and register your new profile and start interacting with all our friends!</string>

    <string name="homepage">Nothing published yet. Use your skills to publish a new time offer.\n
                Go in the provided section using the sidebar and publish the first advertisement</string>

    <string name="web_client_id">704043757142-su9qfek247vvrquhunelunu7binit5eg.apps.googleusercontent.com</string>

    <string name="skillfragDesc">Welcome, find people which can save you time. Look for people that have the skills
    you need! </string>

    <string name="chatReceived">You have not received any request yet.</string>
    <string name="chatSent">You have not sent any request yet.</string>
</resources>