<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <LinearLayout
        android:id="@+id/LinearLayoutShow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButtonShow"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="match_parent"
            android:layout_height="222dp"
            android:adjustViewBounds="false"
            android:background="@color/white"
            android:baselineAligned="false"
            android:contentDescription="@string/picutureTest"
            app:srcCompat="@drawable/user" />

        <ScrollView
            android:id="@+id/scrollViewShow"
            style="@android:style/Widget.ScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp">

            <LinearLayout
                android:id="@+id/LinearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/fullName"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/editTextTextPersonName"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/fullNameHint"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textNickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/nickname"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/editTextTextPersonName3"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nickname_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/email"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/editTextTextEmailAddress"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email_hint"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/textLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/location"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/editTextLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/location_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPostalAddress"
                    android:minHeight="48dp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/textSkills"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/skills"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="20sp"
                    android:textStyle="italic" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>