<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/scrollViewShow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/toolbarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/my_toolbar"
                    style="@style/Widget.MaterialComponents.Toolbar.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:title="@string/app_name"
                    app:titleCentered="true"/>

            </com.google.android.material.appbar.AppBarLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/userImage"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/picutureTest"
                    android:src="@drawable/user_icon"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="1dp" />

                <ImageButton
                    android:id="@+id/plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="110dp"
                    android:backgroundTint="@color/GhostWhite"
                    android:contentDescription="@string/picutureTest"

                    android:minHeight="48dp"
                    app:srcCompat="@drawable/outline_photo_camera_24"
                    tools:ignore="DuplicateSpeakableTextCheck" />
            </FrameLayout>

            <TextView
                android:id="@+id/AccountInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/accInfo"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="20sp"
                android:textStyle="italic" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedFullName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fullName"
                    app:boxStrokeWidth="2dp"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/format_title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/outlinedFullnameFixed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#757575"
                        tools:ignore="TextContrastCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedNickName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nickname"
                    app:boxStrokeWidth="2dp"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/baseline_face_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/outlinedNickNameFixed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#757575"
                        tools:ignore="TextContrastCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    app:boxStrokeWidth="2dp"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/outline_email_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/outlinedEmailFixed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:textColor="#757575"
                        tools:ignore="TextContrastCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedLocation"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/location"
                    app:boxStrokeWidth="2dp"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/outline_location_on_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/outlinedLocationFixed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#757575"
                        tools:ignore="TextContrastCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedAboutMe"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/aboutMe"
                    app:boxStrokeWidth="2dp"
                    app:errorEnabled="true"
                    app:startIconDrawable="?android:attr/actionModeFindDrawable">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/outlinedAboutmeFixed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#757575"
                        tools:ignore="TextContrastCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textSkills"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:paddingStart="5dp"
                    android:paddingEnd="2dp"
                    android:paddingBottom="5dp"
                    android:text="@string/skills"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    app:drawableEndCompat="@drawable/outline_add_circle_outline_24" />

                <LinearLayout
                    android:id="@+id/lastLinear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>